# study

./: README.md  cmdcommit.txt
hellolens/: hellolens.cabal
hellolens/src/: Main.hs  MyApplicative.hs  MyTraversal.hs
hellostack/: hellostack.cabal
hellostack/.stack-work/install/d4203e17/flag-cache/: adjunctions-4.2.2-1e0ae30599629905e2ae9a8c2c269ef2  hellostack-0.1.0.0-7dcd63ee1e0b5335705e7aefc848fb4e  hellostack-0.1.0.0-eee7f41cc0f8c5f86d405cc6eee505a7  hellostack-0.1.0.0-f982af7f84cc4e9efba8e73e57e7c63e  kan-extensions-4.2.3-6fedf3fda1ec36e3828e4c9fb24c3d27  lens-4.12.3-52c29c588ab9fd73d0c129e84026033b  primitive-0.6.1.0-e5ee87ac2982e606a39193b80d8a3953  reflection-2-e399a859a760dc2259b0c5f750f24454  vector-0.10.12.3-735a19ff3851d57ec7aead8d3cfd40e1
hellostack/.stack-work/install/d4203e17/lib/x86_64-windows-ghc-7.10.2/hellostack-0.1.0.0-8Fu7W2EQq0ULVx1GhUrP5V/: Lib.hi
hellostack/.stack-work/install/d4203e17/lib/x86_64-windows-ghc-7.10.2/hellostack-0.1.0.0-DpO6QLemaln1SI9nzNf3KH/: Lib.hi
hellostack/.stack-work/install/d4203e17/lib/x86_64-windows-ghc-7.10.2/hellostack-0.1.0.0-FX0aaIH6m8eITytBHu19gU/: Lib.hi
hellostack/.stack-work/install/d4203e17/pkgdb/: hellostack-0.1.0.0-6508623403cd9515de5cf8e4e79f217c.conf  hellostack-0.1.0.0-7dcd63ee1e0b5335705e7aefc848fb4e.conf  hellostack-0.1.0.0-eee7f41cc0f8c5f86d405cc6eee505a7.conf  hellostack-0.1.0.0-f982af7f84cc4e9efba8e73e57e7c63e.conf  package.cache
hellostack/app/: Adder.hs  CoFreeAdder.hs  FreeAdder.hs  Main.hs  MyEnv.hs  MyState.hs  MyWriter.hs  MyWriterT.hs  Pairing.hs
